# rag_architecture_workshop

./: .gitignore  README.md  docker-compose.yml  package-lock.json  pyproject.toml
backend/: README.md
backend/app/: main.py
backend/app/api/: __init__.py  api.py
backend/app/core/: __init__.py  chunking.py  database.py  embeddings.py  history.py  llm.py
backend/app/models/: schemas.py
backend/app/services/: __init__.py  services.py
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/api/: client.ts  ragClient.ts
frontend/src/components/: ChatBubble.tsx  ChatInput.tsx  ChatTranscript.tsx  WorkshopShell.tsx
frontend/src/pages/: ChatPage.tsx
infra/docker/backend/: Dockerfile
infra/docker/frontend/: Dockerfile
infra/docker/ollama/: Dockerfile  entrypoint.sh
